<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.cmc.purithm.feature.review.viewmodel.ReviewWriteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/grey_100"
        android:fitsSystemWindows="true">

        <com.cmc.purithm.design.component.appbar.PurithmAppbar
            android:id="@+id/view_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scroll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_appbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingBottom="100dp">

                <ImageView
                    android:id="@+id/img_background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_review_0"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:reviewBackground="@{vm.state.pureDegree}"
                    tools:src="@drawable/bg_review_100" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:cardCornerRadius="99dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_thumbnail"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{vm.state.thumbnail}"
                        tools:src="@drawable/bg_image_placeholder" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/layout_review_intensity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="@{vm.state.pureDegree == -1 ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_thumbnail"
                    tools:visibility="gone">

                    <TextView
                        android:id="@+id/tv_filter_review_title"
                        style="@style/kr_body_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_review_satisfactory"
                        android:textColor="@color/blue_400" />

                    <TextView
                        android:id="@+id/tv_review_intensity"
                        style="@style/kr_title_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue_400"
                        app:review_percentage="@{vm.state.pureDegree}" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/kr_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_review_write"
                    android:textColor="@color/grey_500"
                    android:visibility="@{vm.state.pureDegree == -1 ? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_thumbnail" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:layout_marginTop="6dp"
                    android:text="@string/content_review_write_description"
                    android:textColor="@color/grey_400"
                    android:visibility="@{vm.state.pureDegree == -1 ? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <com.cmc.purithm.design.component.view.PurithmSeekBar
                    android:id="@+id/seekbar_review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:paddingHorizontal="@dimen/margin_screen_side"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description" />

                <TextView
                    android:id="@+id/tv_review_write_title"
                    style="@style/kr_body_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:layout_marginTop="60dp"
                    android:text="@string/title_review_write_description"
                    android:textColor="@color/grey_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seekbar_review" />

                <com.cmc.purithm.design.component.edittext.PurithmMultipleEditText
                    android:id="@+id/edit_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_review_write_title" />

                <TextView
                    android:id="@+id/tv_review_write_require_picture"
                    style="@style/kr_body_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:layout_marginTop="20dp"
                    android:text="@string/content_review_write_require_picture"
                    android:textColor="@color/grey_300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_review" />

                <HorizontalScrollView
                    android:id="@+id/scroll_img"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_screen_side"
                    android:layout_marginTop="10dp"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_review_write_require_picture">

                    <!-- 추가되는 View마다 marginEnd 20 추가 -->
                    <LinearLayout
                        android:id="@+id/layout_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_add"
                            android:layout_width="98dp"
                            android:layout_height="98dp"
                            android:layout_marginEnd="@dimen/margin_screen_side"
                            android:src="@drawable/bg_img_add"
                            android:visibility="@{vm.state.pictures.size() &lt; 3 ? View.VISIBLE : View.GONE}"

                            app:delayClickEvent="@{() -> vm.startGallery()}" />

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/tv_term_of_review_title"
                    style="@style/kr_body_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_screen_side"
                    android:layout_marginTop="60dp"
                    android:text="@string/title_terms_of_review"
                    android:textColor="@color/grey_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/scroll_img" />

                <LinearLayout
                    android:id="@+id/layout_term_of_review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_screen_side"
                    android:background="@drawable/shape_white_round_background"
                    android:orientation="vertical"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_term_of_review_title">

                    <TextView
                        style="@style/kr_body_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_terms_of_review_introduction"
                        android:textColor="@color/grey_400" />

                    <com.cmc.purithm.feature.review.view.TermOfReviewTextView
                        android:id="@+id/tv_term_of_review_content_1"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"/>

                    <com.cmc.purithm.feature.review.view.TermOfReviewTextView
                        android:id="@+id/tv_term_of_review_content_2"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"/>

                    <com.cmc.purithm.feature.review.view.TermOfReviewTextView
                        android:id="@+id/tv_term_of_review_content_3"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"/>

                    <com.cmc.purithm.feature.review.view.TermOfReviewTextView
                        android:id="@+id/tv_term_of_review_content_4"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/btn_term_of_service_agreement"
                    style="@style/kr_body_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="140dp"
                    android:button="@drawable/selector_ic_checkbox"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/content_terms_of_review_agree"
                    android:theme="@style/style_checkbox"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_term_of_review"
                    app:layout_constraintVertical_bias="0" />

                <CheckBox
                    android:id="@+id/btn_term_of_service_introduce_agreement"
                    style="@style/kr_body_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:layout_marginBottom="140dp"
                    android:button="@drawable/selector_ic_checkbox"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/content_terms_of_review_introduce_agree"
                    android:theme="@style/style_checkbox"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_term_of_service_agreement"
                    app:layout_constraintVertical_bias="0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            style="@style/kr_body_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_bottom_button"
            android:layout_marginHorizontal="@dimen/margin_screen_side"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/margin_bottom_button_bottom"
            android:background="@drawable/shape_button_solid_primary_lg"
            android:enabled="@{(vm.state.pureDegree > 19 &amp;&amp; vm.state.agree &amp;&amp; vm.state.introduceAgree &amp;&amp; vm.state.content.length() > 19 &amp;&amp; vm.state.pictures.size() > 0) ? true : false}"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/content_upload"
            android:textColor="@color/white"
            app:delayClickEvent="@{() -> vm.addReview()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>